# minishell

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test.sh
Libft/: CMakeLists.txt  Makefile  cmake_install.cmake
Libft/ft_printf/: ft_itoa.c  ft_printf.c  ft_printf_hex.c  ft_printf_ptr.c  ft_printf_unsign.c  utils.c
Libft/ft_printf/include/: ft_printf.h
Libft/get_next_line/: Makefile  cmake_install.cmake
Libft/include/: libft.h  libft.h.gch
Libft/src/: ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_dstrdup.c  ft_dstrfree.c  ft_dstrlen.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isupper.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_realloc.c  ft_split.c  ft_splitset.c  ft_strchr.c  ft_strchr_multi.c  ft_strcmp.c  ft_strcpy.c  ft_strdup.c  (+15 more)
include/: builtins.h  environment.h  executor.h  minishell.h
src/: error.c  execute.c  main.c  parse.c  pipe.c  signals.c  utils.c
src/cmd_builtins/: ft_cd.c  ft_echo.c  ft_env.c  ft_exit.c  ft_export.c  ft_pwd.c  ft_unset.c
src/environment/: environ.c  ft_getenv.c  ft_getenviron_value.c  ft_setenv.c  ft_unsetenv.c
src/execute/: execute.c  multi_cmd.c  multiple_processes.c  pipe.c  wait_children.c
src/parsing/: check_spec_char.c  parse.c  tokenize.c
src/redirections/: redir_stdin.c  redir_stdout.c  test.txt
